--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,9 @@
  <head>
  	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1">
- 	<title>hello coursera! it's a great course</title>
+ 	<title>hello coursera! </title>
  </head>
  <body>
- <h1>Coursera Test!</h1>
+ <h1>Coursera Test!it's a great course</h1>
  </body>
  </html>
